--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "github:Drayyyxd/XD-Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
@@ -13,18 +16,18 @@
     "@dark-yasiya/scrap": "1.0.1",
     "pino": "^7.0.5",
     "util": "^0.12.4",
-    "express": "latest",
+    "express": "^4.18.2",
     "moment-timezone": "^0.5.45",
     "axios": "^1.2.5",
-    "crypto-digest-sync": "^1.0.0",
-    "crypto-js": "latest",
+    "crypto-digest-sync": "1.0.0",
+    "crypto-js": "^4.1.1",
     "file_size_url": "1.0.4",
     "fs-extra": "^11.1.0",
     "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "google-tts-api": "^2.0.2",
     "path": "^0.12.7",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "btch-downloader": "^2.2.9",
     "megajs": "^1.1.0",
     "pdfkit": "^0.14.0",
@@ -35,10 +38,12 @@
     "cheerio": "^1.0.0-rc.12",
     "ruhend-scraper": "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "yt-search": "2.11.1",
+    "yt-search": "^2.11.1",
     "api-dylux": "1.8.5",
     "@mrnima/tiktok-downloader": "1.0.0",
     "@mrnima/facebook-downloader": "1.0.0",
-    "mrnima-moviedl": "1.0.0"
+    "mrnima-moviedl": "1.0.0",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.6"
   }
 }
